sre/oke/deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aml-risk-dev
  namespace: fusionx-aml
  labels:
    app: aml-risk-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aml-risk-dev
  template:
    metadata:
      labels:
        app: aml-risk-dev
        version: v1
    spec:
      imagePullSecrets:
      - name: lolc-secret-dev
      containers:
      - name: aml-risk-dev
        image: fra.ocir.io/lolctech/fxapiuser/aml-risk-dev:latest
        ports:
          - name: swagger-ui-port
            containerPort: 8080
