sre/oke/deployment-master.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aml-risk-master
  namespace: fusionx-aml
  labels:
    app: aml-risk-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aml-risk-master
  template:
    metadata:
      labels:
        app: aml-risk-master
        version: v1
    spec:
      imagePullSecrets:
      - name: lolc-secret-master
      containers:
      - name: aml-risk-master
        image: fra.ocir.io/lolctech/fxapiuser/aml-risk:latest
        ports:
          - name: swagger-ui-port
            containerPort: 8080
