sre/oke/deployment-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aml-risk-test
  namespace: fusionx-aml 
  labels:
    app: aml-risk-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aml-risk-test
  template:
    metadata:
      labels:
        app: aml-risk-test
        version: v1
    spec:
      imagePullSecrets:
      - name: lolc-secret-dev
      containers:
      - name: aml-risk-test
        image: fra.ocir.io/lolctech/fxapiuser/aml-risk-test:latest
        ports:
          - name: swagger-ui-port
            containerPort: 8080
