sre/oke/deployment-uat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aml-risk-uat
  namespace: fusionx-aml 
  labels:
    app: aml-risk-uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aml-risk-uat
  template:
    metadata:
      labels:
        app: aml-risk-uat
        version: v1
    spec:
      imagePullSecrets:
      - name: lolc-secret-uat
      containers:
      - name: aml-risk-uat
        image: fra.ocir.io/lolctech/fxapiuser/aml-risk-uat:latest
        ports:
          - name: swagger-ui-port
            containerPort: 8080
