sre/oke/service-elb-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: aml-risk-dev
  namespace: fusionx-aml 
  labels:
    app: aml-risk-dev
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
  selector:
    app: aml-risk-dev
