sre/oke/service-elb-master.yml
apiVersion: v1
kind: Service
metadata:
  name: aml-risk-master
  labels:
    app: aml-risk-master
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
  selector:
    app: aml-risk-master
