sre/oke/service-elb-test.yml
apiVersion: v1
kind: Service
metadata:
  name: aml-risk-test
  labels:
    app: aml-risk-test
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
  selector:
    app: aml-risk-test
