sre/oke/service-elb-uat.yml
apiVersion: v1
kind: Service
metadata:
  name: aml-risk-uat
  labels:
    app: aml-risk-uat
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
  selector:
    app: aml-risk-uat
