sre/oke/virtual-service-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aml-risk-dev
spec:
  hosts:
  - "*"
  gateways:
  - fusionx-gateway
  http:
  - match:
    - uri:
        prefix: /aml-risk
    route:
    - destination:
        host: aml-risk-dev
        port:
          number: 8080
